# ora

./: .gitignore  .pythonstartup  .travis.yml  CMakeLists.txt  LICENSE  MANIFEST.in  Makefile  README.md  RELEASE.md  TODO.md  build-manylinux-wheel  developing.md  env.sh  format.md  pyproject.toml  pythonstartup  setup.cfg  setup.py
.github/workflows/: makefile.yml
benchmarks/: benchmark.py
c++/: CMakeLists.txt
c++/include/: cron.hh  filename.hh  printable.hh
c++/src/: calendar.cc  date.cc  date_doc.cc  date_math.cc  daytime.cc  daytime_math.cc  filename.cc  format.cc  time.cc  time_zone.cc  tzfile.cc
c++/test/: calendar.cc  date.cc  date_format.cc  date_functions.cc  date_interval.cc  date_math.cc  date_nex.cc  date_safe.cc  daytime.cc  daytime_functions.cc  daytime_nex.cc  daytime_safe.cc  format.cc  from_local.cc  holidays.cal  string_builder.cc  time.cc  time128.cc  time_format.cc  time_functions.cc  time_interval.cc  time_nex.cc  time_safe.cc  time_zone.cc  to_local.cc
conda-recipe/: meta.yaml
cxx/: CMakeLists.txt  CMakeLists.txt.googletest
cxx/include/: ora.hh
cxx/include/aslib/: exc.hh  file.hh  math.hh  mem.hh  printable.hh  ranged.hh  string.hh  string_builder.hh  xsys.hh
cxx/include/ora/: calendar.hh  date_functions.hh  date_math.hh  date_nex.hh  date_type.hh  daytime_functions.hh  daytime_math.hh  daytime_nex.hh  daytime_type.hh  exceptions.hh  format.hh  localization.hh  localization_nex.hh  parse.hh  posixtz.hh  time_functions.hh  time_interval.hh  time_math.hh  time_nex.hh  time_type.hh  time_zone.hh  types.hh  tzfile.hh
cxx/include/ora/lib/: exc.hh  file.hh  filename.hh  iter.hh  math.hh  mem.hh  num.hh  printable.hh  ptr.hh  ranged.hh  string.hh  string_builder.hh  xsys.hh
cxx/src/: calendar.cc  date.cc  date_math.cc  daytime.cc  daytime_math.cc  file.cc  filename.cc  format.cc  parse.cc  posixtz.cc  time.cc  time_zone.cc  tzfile.cc
cxx/test/: .gitignore  calendar.cc  date.cc  date_format.cc  date_math.cc  daytime.cc  daytime_functions.cc  daytime_nex.cc  format.cc  from_local.cc  holidays.cal  parse.cc  posixtz.cc  string_builder.cc  time.cc  time128.cc  time_format.cc  time_functions.cc  time_interval.cc  time_zone.cc  to_local.cc
docs/: Makefile  background.rst  c++-date-math.md  c++-date.md  c++-daytime.md  c++.md  calendars.rst  conf.py  dates.rst  developing.md  format.md  formatting.rst  index.rst  limitations.rst  localization.rst  motivation.rst  numpy.rst  ontology.md  python-date.md  python-time-zone.md  python.md  time zones.rst  time-zones.rst  times.rst
include/: exc.hh  file.hh  filename.hh  mem.hh  ptr.hh  ranged.hh  string.hh  string_builder.hh  xsys.hh
include/cron/: calendar.hh  date.hh  date_functions.hh  date_interval.hh  date_math.hh  daytime.hh  ez.hh  format.hh  math.hh  time.hh  time_interval.hh  time_zone.hh  types.hh
notes/: api.md  api.txt  cal.md  ctors.txt  format-comparison.txt  names.md  numerics.md  prior art.md  todo.md
notes/docs/: c++-date-math.md  c++-date.md  c++-daytime.md  ontology.md  philosophy.md  python-date.md  python-local.md  python.md
python/: .gitignore  setup.py  wrap_docstrings
python/cron/: ext.cc  (+44 more)
sphinx/: dates.rst  index.rst  motivation.rst
src/: calendar.cc  date.cc  date_math.cc  daytime.cc  file.cc  filename.cc  format.cc  time.cc  time_zone.cc  tzfile.cc
talks/: SciPy-2018.html
test/: .gitignore  calendar.cc  date.cc  date_interval.cc  daytime.cc  format.cc  string_builder.cc  time.cc  time_interval.cc  time_zone.cc
(+198 files in other folders)
