[metadata]
description-file = README.md

[bumpversion]
current_version = 0.6.6
commit = True
tag = True

[bumpversion:file:python/ora/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:conda-recipe/meta.yaml]

[bumpversion:file:docs/conf.py]

[tool:pytest]
markers =
    fulltz: Exhaustive time zone tests.
addopts = -m "not fulltz"

