[bumpversion]
current_version = 0.10.3
commit = True
tag = True

[metadata]
description_file = README.md

[bumpversion:file:python/ora/__init__.py]

[bumpversion:file:setup.py]

[bumpversion:file:conda-recipe/meta.yaml]

[bumpversion:file:docs/conf.py]

[tool:pytest]
markers = 
	fulltz: Exhaustive time zone tests.
addopts = -m "not fulltz"
